<resources>
    <string name="app_name">GitStudio</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_btn_login">Login</string>

    <!-- Strings related to error prompt -->
    <string name="error_incorrect_password">用户名或密码错误</string>
    <string name="error_empty_username_or_password">用户名和密码不能为空</string>
    <string name="error_network_fail">网络请求失败</string>

    <!-- Strings of user type -->
    <string name="user_type_teacher">teacher</string>
    <string name="user_type_student">student</string>

    <!--Strings of drawer items -->
    <string name="drawer_teacher_all_classes">所有班级</string>
    <string name="drawer_teacher_homework">我布置的作业</string>
    <string name="drawer_teacher_exercise">我布置的练习</string>
    <string name="drawer_teacher_exam">我发布的考试</string>
    <string name="drawer_student_homework">我的作业</string>
    <string name="drawer_student_exercise">我的练习</string>
    <string name="drawer_student_exam">我的考试</string>
    <string name="drawer_about_account">账户相关</string>
    <string name="drawer_logout">退出登录</string>

    <!-- Strings of layout prompt -->
    <string name="wave_line">~</string>
    <string name="description">描述：</string>
    <string name="time">时间：</string>
    <string name="status">状态：</string>
    <string name="check_exercise_score">查看学生成绩</string>
    <string name="check_exercise_analyze">查看结果分析</string>

    <!-- Strings of exercise status -->
    <string name="exercise_status_newly">新建态</string>
    <string name="exercise_status_initing">正在初始化</string>
    <string name="exercise_status_initFail">初始化失败</string>
    <string name="exercise_status_initSuccess">初始化成功</string>
    <string name="exercise_status_ongoing">正在进行</string>
    <string name="exercise_status_timeup">时间到</string>
    <string name="exercise_status_analyzing">正在分析结果</string>
    <string name="exercise_status_analyzingFinish">结果分析完毕</string>

    <string name="exercise_detail_question_list">问题列表</string>

    <!-- Strings of question score -->
    <string name="score_item_question_title">question title</string>
    <string name="score_item_score_interval">分数段</string>
    <string name="score_item_0_60">0~60</string>
    <string name="score_item_60_80">60~80</string>
    <string name="score_item_80_90">80~90</string>
    <string name="score_item_90_100">90~100</string>
    <string name="score_item_student_count">人数</string>

    <!-- Strings of question test case -->
    <string name="test_case_item_compile_title">编译结果</string>
    <string name="test_case_item_tested_title">是否测试</string>
    <string name="test_case_item_score_title">测试得分</string>
    <string name="test_case_item_detail_button_text">测试用例通过详情</string>
    <string name="test_case_item_no_test_case">无测试用例</string>

    <string name="test_case_empty_tip">问题列表为空</string>
    <string name="exercise_analyse_empty_tip">分析结果为空</string>
    <string name="student_list_empty_tip">学生列表为空</string>

    <string name="read_me_loading">加载中...</string>

</resources>
