<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.nju.gitstudio.ExerciseDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_exercise_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        style="?android:listSeparatorTextViewStyle"/>
    <TextView
        android:id="@+id/activity_exercise_detail_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        tools:text="练习描述"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        style="?android:listSeparatorTextViewStyle"/>
    <TextView
        android:id="@+id/activity_exercise_detail_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        tools:text="练习时间"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        style="?android:listSeparatorTextViewStyle"/>
    <TextView
        android:id="@+id/activity_exercise_detail_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        tools:text="练习状态"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_exercise_detail_question_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="4dp"
            android:text="@string/exercise_detail_question_list"/>

        <Button
            android:id="@+id/activity_exercise_detail_analyze_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>



</LinearLayout>
